added events to home coponent and navbar is fixed top

--- a/EventsApp-Ui/src/app/app.component.html
+++ b/EventsApp-Ui/src/app/app.component.html
@@ -2,7 +2,9 @@
  <app-header></app-header>
 
  <!-- routes will be rendered here -->
- <router-outlet></router-outlet>
+ <div class="container-fluid">
+      <router-outlet></router-outlet>
+ </div>
 
  <!-- footer -->
  <app-footer></app-footer>
