--- a/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.html
@@ -1,5 +1,6 @@
-<ngb-carousel #carousel interval="1000" [pauseOnHover]="pauseOnHover" (slide)="onSlide($event)">
-    <ng-template ngbSlide *ngFor="let img of images; index as i">
+<div class="col col-xs-8 offset-xs-2 image-container">
+  <ngb-carousel #carousel interval="1000" [pauseOnHover]="pauseOnHover" (slide)="onSlide($event)">
+    <ng-template ngbSlide *ngFor="let img of images; index as i;">
       <div class="carousel-caption">
         <h3>My slide {{i + 1}} title</h3>
       </div>
@@ -10,6 +11,5 @@
       </a>
     </ng-template>
   </ngb-carousel>
-  
   <hr>
-  
+</div>
