--- a/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-custom">
-
+<nav class="navbar navbar-custom fixed-top">
     <!-- logo -->
     <div class="navbar-brand">
       <a class="navbar-item">
