--- a/EventsApp-Ui/src/app/shared-module/components/home/home.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/home/home.component.html
@@ -1,12 +1,9 @@
-<div class="container-fluid">
     <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6"><ad-rotator></ad-rotator></div> 
-        <div class="col-sm-3"></div>
-        <!-- Courosel-->
+      <!-- Courosel-->
+        <div class="col-xs-6"><ad-rotator></ad-rotator></div>
     </div>
     <div class="row">
         <!-- Event Tiles-->
+        <app-events></app-events>
     </div>
-  
-</div>
+
