updated styles on events titles

--- a/EventsApp-Ui/src/app/shared-module/components/home/home.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/home/home.component.html
@@ -2,7 +2,7 @@
       <!-- Courosel-->
         <div class="col-xs-6"><ad-rotator></ad-rotator></div>
     </div>
-    <div class="row">
+    <div class="row gray">
         <!-- Event Tiles-->
         <app-events></app-events>
     </div>
