--- a/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.css
+++ b/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.css
@@ -1,10 +1,9 @@
 
 /* Filtering table demo */
-ngbd-table-filtering span.ngb-highlight {
+/* ngbd-table-filtering span.ngb-highlight {
     background-color: yellow;
   }
 
-  /* Complete table demo */
   ngbd-table-complete span.ngb-highlight {
     background-color: yellow;
   }
@@ -12,7 +11,7 @@ ngbd-table-filtering span.ngb-highlight {
   ngb-carousel .picsum-img-wrapper {
     position: relative;
     height: 0;
-    padding-top: 55%; /* Keep ratio for 900x500 images */
+    padding-top: 55%;
   }
 
   ngb-carousel .picsum-img-wrapper>img {
@@ -23,8 +22,10 @@ ngbd-table-filtering span.ngb-highlight {
     right: 0;
   }
   .carouselImage { width:100%;  height: auto;}
-  ::ng-deep .container-fluid { padding:0 !important; }
+  ::ng-deep .container-fluid { padding:0 !important; } */
 
   .image-container {
-    padding: 100px;
+    margin-top: 50px;
+    padding: 50px;
+    width: 100% !important;
   }
