--- a/EventsApp-Ui/src/app/shared-module/components/events/events.component.css
+++ b/EventsApp-Ui/src/app/shared-module/components/events/events.component.css
@@ -9,8 +9,8 @@
   box-shadow: 0px 2px 4px 1px #fff;
   border-radius:10px;
   /* background: #394a6d; */
-  background: gray;
-  color:white;
+  background: white;
+  color:black;
 }
 .categoryTitle {
   font-size: 22px;
@@ -44,4 +44,23 @@ a:focus, a:hover {
 
 .thumbnail {
   padding: 5px;
+}
+
+.eventImg {
+  width: 100%;
+  overflow: hidden;
+  height: 200px;
+  /* background: no-repeat #f6f7f8;
+  background-image: linear-gradient(to right,#f6f7f8 0,#edeef1 20%,#f6f7f8 40%,#f6f7f8 100%);
+  background-image: -webkit-gradient(to right,#f6f7f8 0,#edeef1 20%,#f6f7f8 40%,#f6f7f8 100%);
+  background-image: -moz-linear-gradient(to right,#f6f7f8 0,#edeef1 20%,#f6f7f8 40%,#f6f7f8 100%);
+  background-image: -o-linear-gradient(to right,#f6f7f8 0,#edeef1 20%,#f6f7f8 40%,#f6f7f8 100%);
+  background-size: 100%; */
+  display: inline-block;
+  position: relative;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-name: placeholderShimmer;
+  -webkit-animation-timing-function: linear;
 }
