--- a/EventsApp-Ui/src/app/shared-module/components/events/events.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/events/events.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row events">
   <!-- <div class="col col-xs-6 Primary-Category" *ngFor="let x of data" activeSection>
     <a [routerLink]="[x.navigate]">
       <div class="row text-center">
@@ -16,14 +16,28 @@
   </div> -->
     <div class="col col-xs-6 Primary-Category" *ngFor="let event of data">
       <div class="thumbnail">
-        <img src="../../../../assets/img/logo-nav@2x.png" alt="...">
+        <div class="eventImg">
+          <img src="https://static.meraevents.com/content/eventlogo/212539/navaratri-utsav_mera_thumb-1-15698335354tjjU.jpg" alt="...">
+        </div>
         <hr/>
         <div class="caption">
-          <h3>{{ event.category }}</h3>
-          <p>{{ event.description }}</p>
+          <div class="row"><h3>{{ event.category }}</h3></div>
+          <div class="row"><mat-icon>date_range</mat-icon><span>{{ event.date }}</span></div>
+          <div class="row"><p>{{ event.description }}</p></div>
           <hr/>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
         </div>
+        <div class="row">
+            <div class="col float-left">
+                <button mat-icon-button aria-label="Example icon-button with a heart icon" (click)="share()">
+                    <mat-icon>share</mat-icon>
+                  </button>
+            </div>
+            <div class="col float-right">
+              <div class="row">
+                    <mat-icon>my_location</mat-icon> <span> {{ event.location }} </span>
+              </div>
+               </div>
+          </div>
       </div>
     </div>
 </div>
