--- a/EventsApp-Ui/src/app/shared-module/components/footer/footer.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container">
     <div class="content has-text-centered">
       <p>
-        Made with <3 by <a href="https://twitter.com/chrisoncode">Chris from Scotch</a>
+          © 2019-2029, Copyright @ anywhereevents.com. All Rights Reserved
       </p>
     </div>
     </div>
