ad-rotator adjusted the width and height

--- a/EventsApp-Ui/src/app/shared-module/components/events/events.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/events/events.component.html
@@ -17,7 +17,7 @@
     <div class="col col-xs-6 Primary-Category" *ngFor="let event of data">
       <div class="thumbnail">
         <div class="eventImg">
-          <img src="https://static.meraevents.com/content/eventlogo/212539/navaratri-utsav_mera_thumb-1-15698335354tjjU.jpg" alt="...">
+          <img src="../../../../assets/img/no-image.png" alt="...">
         </div>
         <hr/>
         <div class="caption">
