--- a/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.html
@@ -6,7 +6,7 @@
       </div>
       <a href="https://www.google.fr/?q=Number+{{i+1}}" target="_blank" rel="nofollow noopener noreferrer">
         <div class="picsum-img-wrapper">
-          <img [src]="img" alt="My image {{i + 1}} description">
+          <img [src]="img" alt="My image {{i + 1}} description" style="width: 100%;height: 300px;">
         </div>
       </a>
     </ng-template>
