modified the backcolor for events and also adjusted header height

--- a/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
@@ -2,7 +2,7 @@
     <!-- logo -->
     <div class="navbar-brand">
       <a class="navbar-item">
-        <img src="assets\img\logo-nav@2x.png">
+        <img src="assets\img\logo-nav@2x.png" style="height: 35px;">
       </a>
     </div>
   </nav>
