--- a/EventsApp-Ui/src/app/shared-module/components/events/events.component.css
+++ b/EventsApp-Ui/src/app/shared-module/components/events/events.component.css
@@ -64,3 +64,7 @@ a:focus, a:hover {
   -webkit-animation-name: placeholderShimmer;
   -webkit-animation-timing-function: linear;
 }
+
+.events {
+  margin: 10px;
+}
