added event-details component and navigation

--- a/EventsApp-Ui/src/app/app.component.html
+++ b/EventsApp-Ui/src/app/app.component.html
@@ -2,7 +2,7 @@
  <app-header></app-header>
 
  <!-- routes will be rendered here -->
- <div class="container-fluid">
+ <div class="container-fluid topSpace">
       <router-outlet></router-outlet>
  </div>
 
