--- a/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.css
+++ b/EventsApp-Ui/src/app/shared-module/components/ad-rotator/ad-rotator.component.css
@@ -25,7 +25,6 @@
   ::ng-deep .container-fluid { padding:0 !important; } */
 
   .image-container {
-    margin-top: 15px;
-    padding: 50px;
+    /* padding: 50px; */
     width: 100% !important;
   }
