--- a/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-custom fixed-top">
     <!-- logo -->
     <div class="navbar-brand">
-      <a class="navbar-item">
+      <a class="navbar-item" routerLink="/">
         <img src="assets\img\logo-nav@2x.png" style="height: 35px;">
       </a>
     </div>
