--- a/EventsApp-Ui/src/app/shared-module/components/events/events.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/events/events.component.html
@@ -15,6 +15,7 @@
     </a>
   </div> -->
     <div class="col col-xs-6 Primary-Category" *ngFor="let event of data">
+      <a href="#" routerLink="/event-details/{{event.id}}">
       <div class="thumbnail">
         <div class="eventImg">
           <img src="../../../../assets/img/no-image.png" alt="...">
@@ -39,5 +40,6 @@
                </div>
           </div>
       </div>
+    </a>
     </div>
 </div>
