included sections which needs to be part of event details page

--- a/EventsApp-Ui/src/app/shared-module/components/events/event-details/event-details.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/events/event-details/event-details.component.html
@@ -24,3 +24,13 @@
     </p>
   </div>
 </div>
+<!-- adas
+
+Row 1 - Image banner for the event
+Row 2 - Event Name, description, timing and other options
+Row 3 - Date selection
+Row 4 - Passes with quantity selection
+Row 5 - About the event in details
+Row 6 - More events from the same organizer
+Row 7 - Map location (google map)
+-->
