--- a/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
+++ b/EventsApp-Ui/src/app/shared-module/components/header/header.component.html
@@ -35,7 +35,7 @@
               <ul class="navbar-nav">
                   <li class="nav-item">
                       <a class="nav-link" href="javascript:void(0)">
-                          <i class="material-icons">dashboard</i>
+                          <i class="material-icons btn-white">dashboard</i>
                           <p>
                               <span class="d-lg-none d-md-block">Stats</span>
                           </p>
